Complete deployment configuration for Render

--- a/UEP-Freelance-Backend/Dockerfile
+++ b/UEP-Freelance-Backend/Dockerfile
@@ -1,17 +1,17 @@
-# ============================================
-# DOCKERFILE FOR JAVA SPRING BOOT
-# Save this as: UEP-Freelance-Backend/Dockerfile
-# ============================================
-
 # Build stage
-FROM maven:3.8-openjdk-17 AS build
+FROM maven:3.9-eclipse-temurin-17 AS builder
 WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
 
-# Run stage  
-FROM openjdk:17-jdk-slim
+# Run stage
+FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=builder /app/target/*.jar app.jar
+
+# Render provides PORT environment variable
+ENV PORT=8080
 EXPOSE 8080
+
+# Run Spring Boot app
 ENTRYPOINT ["java", "-jar", "app.jar"]
