Initial commit: Upload project

--- a/UEP-Freelance-Backend/src/main/resources/application.properties
+++ b/UEP-Freelance-Backend/src/main/resources/application.properties
@@ -1,44 +1,19 @@
-server:
-  port: 8080
-  servlet:
-    context-path: /api
+# Server
+server.port=${PORT:8080}
 
-spring:
-  datasource:
-    url: jdbc:h2:mem:uepfreelancedb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: 
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    username: ${EMAIL_USERNAME}
-    password: ${EMAIL_PASSWORD}
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
+# H2 Database (in-memory, no external DB needed)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-jwt:
-  secret: uepFreelanceSecretKey2024ForJWTTokenGenerationAndValidation
-  expiration: 86400000 # 24 hours in milliseconds
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-cors:
-  allowed-origins: http://localhost:3000,http://localhost:5500,http://127.0.0.1:5500
-  allowed-methods: GET,POST,PUT,DELETE,OPTIONS
-  allowed-headers: *
-  allow-credentials: true
+# JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Disable security for now
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
